security/opa/required-labels-template.yaml
{
  "apiVersion": "templates.gatekeeper.sh/v1beta1",
  "kind": "ConstraintTemplate",
  "metadata": {
    "name": "codairequiredlabels"
  },
  "spec": {
    "crd": {
      "spec": {
        "names": {
          "kind": "CodaiRequiredLabels"
        },
        "validation": {
          "openAPIV3Schema": {
            "type": "object",
            "properties": {
              "labels": {
                "type": "array",
                "items": {
                  "type": "string"
                }
              }
            }
          }
        }
      }
    },
    "targets": [
      {
        "target": "admission.k8s.gatekeeper.sh",
        "rego": "\npackage codairequiredlabels\n\nviolation[{\"msg\": msg}] {\n  required := input.parameters.labels\n  provided := input.review.object.metadata.labels\n  missing := required[_]\n  not provided[missing]\n  msg := sprintf(\"Missing required label: %v\", [missing])\n}\n"
      }
    ]
  }
}
